--- a/vidler-frontend/src/styles/App.css
+++ b/vidler-frontend/src/styles/App.css
@@ -40,3 +40,28 @@ body {
 .submit-btn {
   width: 100%;
 }
+
+.row .col{
+  float: none !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-alert button {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #fff;
+  font-size: 20px;
+  position: absolute;
+  right: 10px;
+  top: 15px;
+  color: inherit;
+}
+.card-alert a{
+  color: inherit;
+  font-weight: 500;
+}
+.card-alert a:hover{
+  color: inherit;
+  text-decoration: underline;
+}
